--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <span><i class="fa fa-envelope"></i>k.l.narayana@live.com</span>
                             </div> <!-- /.left-header -->
                         </div> <!-- /.col-md-6 -->
-                        <div class="col-md-6 col-sm-6">
+                        <!--<div class="col-md-6 col-sm-6">
                             <div class="right-header text-right">
                                 <ul class="social-icons">
                                     <li><a href="#" class="fa fa-facebook"></a></li>
@@ -59,8 +59,8 @@
                                     <li><a href="#" class="fa fa-twitter"></a></li>
                                     <li><a href="#" class="fa fa-google-plus"></a></li>
                                 </ul>
-                            </div> <!-- /.left-header -->
-                        </div> <!-- /.col-md-6 -->
+                            </div>--> <!-- /.left-header -->
+                        <!--</div> <!-- /.col-md-6 -->
                     </div> <!-- /.row -->
                 </div> <!-- /.container -->
             </div> <!-- /.top-header -->
@@ -69,8 +69,8 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4 col-xs-6">
                             <div class="logo">
-                                <h1><a href="#" title="Dreri">Strenuous.in</a></h1>
-								<h3 style='margin-left: 52px;'>Performance With Energy</h>
+                                <h1><a href="#" title="Strenuous">Strenuous</a></h1>
+								<h3 style='margin-left: 68px;font-family:quicksandbold;color:#ae351f;'>Performance With Energy</h>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
                         <div class="col-md-8 col-sm-8 col-xs-6">
