--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/templatemo-main.css">
         
     <!-- Favicons -->
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.png">
     
     <!-- JavaScripts -->
     <script src="js/jquery-1.10.2.min.js"></script>
@@ -48,7 +48,7 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="left-header">
                                 <span><i class="fa fa-phone"></i>+91 9000074567</span>
-                                <span><i class="fa fa-envelope"></i>k.l.narayana@live.com</span>
+                                <span><i class="fa fa-envelope"></i>contact@strenuous.in</span>
                             </div> <!-- /.left-header -->
                         </div> <!-- /.col-md-6 -->
                         <!--<div class="col-md-6 col-sm-6">
@@ -69,7 +69,8 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4 col-xs-6">
                             <div class="logo">
-                                <h1><a href="#" title="Strenuous">Strenuous</a></h1>
+							<img style="height: 46px; width: 72px; float: left;" alt="" src="images/strlogo.png">
+                                <h1><a href="/" title="Strenuous">Strenuous</a></h1>
 								<h3 style='margin-left: 68px;font-family:quicksandbold;color:#ae351f;'>Performance With Energy</h>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
@@ -428,7 +429,7 @@
                     <div class="contact-info">
                         <span><i class="fa fa-home"></i>Plot no: 42A, Road no:70, Journalist Colony, Jubliee Hills, Hyderabad-33, Telangana.</span>
                         <span><i class="fa fa-phone"></i>+91 9000074567</span>
-                        <span><i class="fa fa-envelope"></i>k.l.narayana@live.com</span>
+                        <span><i class="fa fa-envelope"></i>contact@strenuous.in</span>
                     </div>
                 </div> <!-- /.col-md-3 -->
             </div> <!-- /.row -->
