Contact number changed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="left-header">
-                                <span><i class="fa fa-phone"></i>+91 9000074567</span>
+                                <span><i class="fa fa-phone"></i>+9140 2355 7355</span>
                                 <span><i class="fa fa-envelope"></i>contact@strenuous.in</span>
                             </div> <!-- /.left-header -->
                         </div> <!-- /.col-md-6 -->
@@ -428,7 +428,7 @@
                     </div> <!-- /.map-holder -->
                     <div class="contact-info">
                         <span><i class="fa fa-home"></i>Plot no: 42A, Road no:70, Journalist Colony, Jubliee Hills, Hyderabad-33, Telangana.</span>
-                        <span><i class="fa fa-phone"></i>+91 9000074567</span>
+                        <span><i class="fa fa-phone"></i>+9140 2355 7355</span>
                         <span><i class="fa fa-envelope"></i>contact@strenuous.in</span>
                     </div>
                 </div> <!-- /.col-md-3 -->
