Added Housekeeping services
Added Housekeeping services

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
 
     <div class="flexslider">
         <ul class="slides">
+		<li>
+                <img src="images/banner09.jpg" alt="">
+            </li>
+					<li>
+                <img src="images/banner10.jpg" alt="">
+            </li>
             <li>
                 <img src="images/banner01.jpg" alt="">
                 <!--<div class="flex-caption">
@@ -141,6 +147,17 @@
             </div> <!-- /.title-section -->
 			<!-- Content from here http://www.axis-security.co.uk/ -->
             <div class="row">
+			                <div class="col-md-3 col-sm-6">
+                    <div class="service-item">
+                        <div class="service-header">
+                            <i class="fa fa-home"></i>
+                            <h3>Housekeeping Services</h3>
+                        </div>
+                        <div class="service-description">
+                            Our House Keeping services are available 24x7 and seven days a week under the complete supervision of accredited Quality Management and Time and Attendance auditing systems. To ensure higher levels of service, our supervisors perform frequent visits to the site as well as audits. Thus, we offer complete support to our client and want to make them comfortable and satisfied with our world class services.
+                        </div>
+                    </div> <!-- /.service-item -->
+                </div> <!-- /.col-md-3 -->
                 <div class="col-md-3 col-sm-6">
                     <div class="service-item">
                         <div class="service-header">
