developing contact us form

--- a/index.html
+++ b/index.html
@@ -417,25 +417,34 @@
             <div class="row">
                 <div class="col-md-7 col-sm-6">
                     <h4 class="widget-title">Send a message to us</h4>
+					<form id="contactform" action="https://mandrillapp.com/api/1.0/messages/send.json" method="post" class="validateform" name="send-contact">
                     <div class="contact-form">
+					<div id="sendmessage" style="display:none;">
+                                <!--Your message has been sent. Thank you!-->
+                            </div>
                         <p class="full-row">
-                            <label for="name-id">Your Name:</label>
+                            <label for="name-id">Your Name: <span class="clsred">*</span> </label>
                             <input type="text" id="name-id" name="name-id">
                         </p>
                         <p class="full-row">
-                            <label for="email-id">Email:</label>
+                            <label for="email-id">Email: <span class="clsred">*</span></label>
                             <input type="text" id="email-id" name="email-id">
                         </p>
+						<p class="full-row">
+                            <label for="phone-no">Phone: <i>(optional)</i></label>
+                            <input type="text" id="phone-no" name="phone-no">
+                        </p>
                         <p class="full-row">
-                            <label for="subject-id">Subject:</label>
+                            <label for="subject-id">Subject: <span class="clsred">*</span></label>
                             <input type="text" id="subject-id" name="subject-id">
                         </p>
                         <p class="full-row">
-                            <label for="message">Message:</label>
+                            <label for="message">Message: <span class="clsred">*</span></label>
                             <textarea name="message" id="message" rows="6"></textarea>
                         </p>
-                        <input class="mainBtn" type="submit" name="" value="Send Message">
+                        <input class="mainBtn" type="submit" name="" value="Send Message" onclick="return sendEmail();">
                     </div>
+					</form>
                 </div> <!-- /.col-md-3 -->
                 <div class="col-md-5 col-sm-6">
                     <h4 class="widget-title">Our location</h4>
