--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <h3>Monitoring Services</h3>
                         </div>
                         <div class="service-description">
-                            Remote CCTV is an effective and economical solution to securing premises or high value items around-the-clock; consolidating video, access control and audio and alarm systems to create a single point of security management. Our centrally based UK monitoring station delivers next generation monitoring services with state-of-the-art CCTV transmission and recording technology to manage and respond to CCTV alarms generated from protected sites, 24/7, 365 days a year.
+                            Remote CCTV is an effective and economical solution to securing premises or high value items around-the-clock; consolidating video, access control and audio and alarm systems to create a single point of security management. Our centrally based monitoring station delivers next generation monitoring services with state-of-the-art CCTV transmission and recording technology to manage and respond to CCTV alarms generated from protected sites, 24/7, 365 days a year.
                         </div>
                     </div> <!-- /.service-item -->
                 </div> <!-- /.col-md-3 -->
@@ -187,7 +187,7 @@
                             <h3>Maintenance Services</h3>
                         </div>
                         <div class="service-description">
-                            Without regular maintenance even the most effective security equipment will deteriorate, so it's important that a qualified technician checks your electronic security system at least annually. This will ensure your equipment is working properly, meets current standards, and is less likely to fail or develop faults in the future. Our maintenance package also guarantees that if you do have a problem, a fully qualified technician can be on site within four hours if required.
+                            Without regular maintenance even the most effective security equipment will deteriorate, so it's important that a qualified technician checks your electronic security system at least annually. This will ensure your equipment is working properly, meets current standards, and is less likely to fail or develop faults in the future. Our maintenance package also guarantees that if you do have a problem, a fully qualified technician can be on site within few hours if required.
                         </div>
                     </div> <!-- /.service-item -->
                 </div> <!-- /.col-md-3 -->
@@ -198,7 +198,7 @@
                             <h3>Access Control</h3>
                         </div>
                         <div class="service-description">
-                            Whether you are embarking on a new access control system or considering migrating and/or enhancing your existing access control system, we offer impartial advice using only best of breed products that are designed to meet the ever changing security standards. Strenuous's access control systems range from standalone systems through to complex multi-site installations including audio/video entry systems, automatic gates, electronic barriers, and turnstiles.
+                            Whether you are embarking on a new access control system or considering migrating and/or enhancing your existing access control system, We offer impartial advice using only best of breed products that are designed to meet the ever changing security standards. Strenuous access control systems range from standalone systems through to complex multi-site installations including audio/video entry systems, automatic gates, electronic barriers, and turnstiles.
                         </div>
                     </div> <!-- /.service-item -->
                 </div> <!-- /.col-md-3 -->
@@ -316,7 +316,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h4 class="widget-title">Experience a World of Difference with Strenuous</h4>
-                    <p>Our manned guarding service has received recognition at the prestigious Security Excellence Awards, and our compliance, in respect of the manner in which we run the business, has resulted in our being awarded an ACS score of +171 which we believe places us in the top 1%. Our professional Front of House/Reception service - Acuity -  is modeled around a modern 5 star hotel offering. As an independently run division, these services can be provided as a standalone offering or in conjunction with our manned guarding services.</p>
+                    <p>Our manned guarding service has received recognition at the prestigious Security Excellence Awards, and our compliance, in respect of the manner in which we run the business. Our professional Front of House/Reception service - Acuity -  is modeled around a modern 5 star hotel offering. As an independently run division, these services can be provided as a standalone offering or in conjunction with our manned guarding services.</p>
                 </div> <!-- /.col-md-3 -->
                 <div class="col-md-4 our-skills" style='display:none;'>
                     <h4 class="widget-title">Our Skills</h4>
