--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                         </div>
                     </div> <!-- /.map-holder -->
                     <div class="contact-info">
-                        <span><i class="fa fa-home"></i>Plot no: 42A, Road no:70, Journalist Colony, Jubliee Hills, Hyderabad-33, Telangana.</span>
+                        <span><i class="fa fa-home"></i>Plot no: 41, Road no:71, Near navanirman, Jubliee Hills public school, Jubliee Hills, Hyderabad-33, Telangana.</span>
                         <span><i class="fa fa-phone"></i>+9140 2355 7355</span>
                         <span><i class="fa fa-envelope"></i>contact@strenuous.in</span>
                     </div>
